BUGS AND TODOS
--------------
  * @todo Add an actual book selector to book-comments.php with errors, etc.
  * @todo add closing comments
  * @todo add a no_merging=1 flag for debugging/example purposes.
  * @todo index.html, readme, goldplaty crap.

VERSION 0.1, 2013-XX-XX
-----------------------
  * Initial public release.